HaloACL extension ChangeLog
===========================
Version 1.5

  FEATURE:
  	
  CHANGES:
    - Added support (i.e. patch) for MW 1.16.4
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
    14895 - Anonymous deletion of ACLs possible
    14985 - Groups do not show up when creating an ACL
  	14908 - Conflict with Liquid Threads
  	14546 - User can modify SD of a subpage


Version 1.4

  FEATURE:
    - Create security descriptors automatically based on the category of an article
    - Create groups automatically based on the category of an article
    - Structure of automatically created groups
    - Automatic protection of sub-pages
    - Dynamic assignees for groups and security descriptors
    - Show dynamic members in ACL articles    
  	
  CHANGES:
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
  14478 - Property page broken when one of the values is protected  
  14356 - Version Diff broken
  14369 - Derived factbox is not showing infered values
  13642 - Error in HACL_Setup.php when wiki is installed at c:\Program files\Ontorpise...
  13740 - Translation to other languages causes problems
  			Added spanish translation provided by Facundo Ezequiel Grande
  13804 - MediaWiki 1.16.0 patch is incorrect in Version 1.3.0_0 [B216]

Version 1.3

  FEATURE:
  	
  CHANGES:
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
	12548 -  $wgGroupPermissions dont prohibit $haclgOpenWikiAccess
	12210 -  Improved error message for protected pages



VERSION 1.2

  FEATURE:
  	Use groups and users from an LDAP/ActiveDirectory server
  	
  CHANGES:
  	* The extension was adapted to Semantic MediaWiki 1.5.1
  	
  BUGFIXES: (Bug numbers according to http://smwforum.ontoprise.com/smwbugs/)
	12098 - DF searches setup HACL_Setup.php in wrong path
	11836 - Protect properties prevents loading derived facts
	12005 - Auto-Completion should be aware of ACL settings